src/test/ui/type-alias-impl-trait/different_defining_uses_never_type.min_tait.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses_never_type.rs:15:1
   |
LL | fn bar() -> Foo {
   | ^^^^^^^^^^^^^^^ expected `&'static str`, got `()`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type.rs:11:1
   |
LL | fn foo() -> Foo {
   | ^^^^^^^^^^^^^^^

error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses_never_type.rs:19:1
   |
LL | fn boo() -> Foo {
   | ^^^^^^^^^^^^^^^ expected `&'static str`, got `()`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type.rs:11:1
   |
LL | fn foo() -> Foo {
   | ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

